@@ -1401,6 +1401,7 @@ enum elf_object_id
 {
   ALPHA_ELF_TDATA = 1,
   ARM_ELF_TDATA,
+  HPPA_ELF_TDATA,
   I386_ELF_TDATA,
   PPC32_ELF_TDATA,
   PPC64_ELF_TDATA,
